More functionality added

--- a/protoSimulator.html
+++ b/protoSimulator.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <div class="title">
+        <div class="title" id="title">
             <h1>Prototype v1.1 Sample</h1>
         </div>
         <div class="terminal">
@@ -22,7 +22,7 @@
                     <img src="terminal.png" alt="???">
                 </div>
                 <div class="write no0-1">
-                    <h4>Sample v1.1</h4>
+                    <h4>Sample v1.1 (Click the title to run the code)</h4>
                 </div>
                 <div class="svg no3"><img src="minimize.png" alt="???"></div>
                 <div class="svg no2"><img src="maximize.png" alt="???"></div>
